--- a/specials.html
+++ b/specials.html
@@ -30,16 +30,13 @@
     </nav>
     <!-- Use the main area to add the main content to the webpages -->
     <main>
-            
-         <div>
-            This is ongoing website and its Under Construction  : Week 5 
-        </div>
+           <div></div>
     </main>
     <footer>
-<p>&copy;Copyright 20099.All Rights Reserved</p>
-<p>Request Information</p>
-<p>Prepared By:Khushbuben Rathva(c0947900) </p>
-<p><a href="mailto:sewing@machine.net">sewing@machine.net</a></p>
+        <p>&copy;Copyright 20099.All Rights Reserved</p>
+        <p>Request Information</p>
+        <p>Prepared By:Khushbuben Rathva(c0947900) </p>
+        <p><a href="mailto:sewing@machine.net">sewing@machine.net</a></p>
     </footer>
 </body>
 </html>
