--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <a href="index.html"><img src="images/bg-logo.jpg" alt="sewing machine zoom" ></a>
     </header>
     <nav>
-        <ul>
+        <ul> 
             <li><a href="index.html">Home</a></li>
             <li><a href="about.html">About Us</a></li>
             <li><a href="team.html">Our Team</a></li>
@@ -32,7 +32,7 @@
     <main>
             
          <div>
-            This is ongoing website and its Under Construction  : Week 5 
+             This is ongoing publish website and its Under Construction  : Week 5 
         </div>
     </main>
     <footer>
