add repo name in path

--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
     <title>Sewing Machines :Template</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://github.com/c0947900/LCOF2469/blob/main/CSS/styles.css">
+    <link rel="stylesheet" href="/LCOF2469/CSS/styles.css">
 </head>
 <body>
     <header>
-        <a href="index.html"><img src="images/bg-logo.jpg" alt="sewing machine zoom" ></a>
+        <a href="index.html"><img src="/LCOF2469/Images/bg-logo.jpg" alt="sewing machine zoom" ></a>
     </header>
     <nav>
         <ul> 
