--- a/specials.html
+++ b/specials.html
@@ -14,11 +14,11 @@
 </head>
 <body>
     <header>
-        <a href="/LCOF2469/index.html"><img src="/LCOF2469/Images/bg-logo.jpg" alt="sewing machine zoom" ></a>
+        <a href="index.html"><img src="/LCOF2469/Images/bg-logo.jpg" alt="sewing machine zoom" ></a>
     </header>
     <nav>
         <ul> 
-            <li><a href="/LCOF2469/index.html">Home</a></li>
+            <li><a href="index.html">Home</a></li>
             <li><a href="/LCOF2469/about.html">About Us</a></li>
             <li><a href="/LCOF2469/team.html">Our Team</a></li>
             <li><a href="/LCOF2469/specials.html">Specials</a></li>
