--- a/specials.html
+++ b/specials.html
@@ -30,7 +30,41 @@
     </nav>
     <!-- Use the main area to add the main content to the webpages -->
     <main>
-           <div></div>
+        <div class="special-offer">
+
+            <!-- Product of the Week -->
+            <section class="product-week">
+                <h2>Product of the Week</h2>
+                <div class="product-content">
+                    <img src="images/product-of-the-week.jpg" alt="Product of the Week" class="product-img">
+                    <p>
+                        This week's featured product is the **SuperStitch Pro 5000**. 
+                        Ideal for both beginners and professionals, the SuperStitch Pro 5000 offers 
+                        a variety of stitch options, an easy-to-use digital display, and 
+                        precision controls. Get yours today and take your sewing projects to the next level!
+                    </p>
+                </div>
+            </section>
+
+            <!-- Weekly Sales -->
+            <section class="weekly-sales">
+                <h2>Weekly Sales</h2>
+                <div class="sale-items">
+                    <div class="sale-item">
+                        <img src="images/sale-item1.jpg" alt="Sale Item 1" class="sale-img">
+                        <p><strong>Model X1000 Sewing Machine</strong> - 20% off this week!</p>
+                    </div>
+                    <div class="sale-item">
+                        <img src="images/sale-item2.jpg" alt="Sale Item 2" class="sale-img">
+                        <p><strong>Heavy Duty Needles Pack</strong> - Buy one, get one free!</p>
+                    </div>
+                    <div class="sale-item">
+                        <img src="images/sale-item3.jpg" alt="Sale Item 3" class="sale-img">
+                        <p><strong>Portable Sewing Kit</strong> - Now only $15.99!</p>
+                    </div>
+                </div>
+            </section>
+         </div>
     </main>
     <footer>
         <p>&copy;Copyright 20099.All Rights Reserved</p>
