upto week 11 completed

--- a/specials.html
+++ b/specials.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
+    <div class="container">
     <header>
         <a href="index.html"><img src="images/bg-logo.jpg" alt="sewing machine zoom" ></a>
     </header>
@@ -28,7 +29,7 @@
             <li><a href="contact.html">Contact</a></li>
         </ul>
     </nav>
-    <!-- Use the main area to add the main content to the webpages -->
+ 
     <main>
         <div class="special-offer">
 
@@ -55,7 +56,7 @@
                         <p><strong>Model X1000 Sewing Machine</strong> - 20% off this week!</p>
                     </div>
                     <div class="sale-item">
-                        <img src="images/sale-item2.jpg" alt="Sale Item 2" class="sale-img">
+                        <img src="images/sale-item21.jpg" alt="Sale Item 2" class="sale-img">
                         <p><strong>Heavy Duty Needles Pack</strong> - Buy one, get one free!</p>
                     </div>
                     <div class="sale-item">
@@ -72,6 +73,7 @@
         <p>Prepared By:Khushbuben Rathva(c0947900) </p>
         <p><a href="mailto:sewing@machine.net">sewing@machine.net</a></p>
     </footer>
+</div>
 </body>
 </html>
 
