--- a/team.html
+++ b/team.html
@@ -11,8 +11,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/team.css">
 </head>
 <body>
+    <div class="container">
     <header>
         <a href="index.html"><img src="images/bg-logo.jpg" alt="sewing machine zoom" ></a>
     </header>
@@ -30,8 +32,67 @@
     </nav>
     <!-- Use the main area to add the main content to the webpages -->
     <main>
-           <div></div>
+        <!-- Who We Are / Our Team -->
+        <section class="our-team">
+            <h1>Who We Are</h1>
+           <p>
+              At Sewing Machines Inc., we pride ourselves on the dedication and expertise of our team, 
+              are united by a shared commitment to quality and innovation. Our employees bring a diverse
+              range of skills, knowledge, and experiences to the table, working together seamlessly 
+              to design, manufacture, and deliver some of the finest sewing machines in the industry. 
+              Our organization is structured into specialized departments, each with a clear focus: 
+              our Research and Development team drives product innovation, our Marketing team connects 
+              with sewing enthusiasts worldwide, our Sales and Customer Support teams ensure a smooth 
+              and satisfying customer experience, and our Executive Leadership guides our mission with
+              strategic vision and passion. Every team member plays an integral role in our mission to 
+              provide exceptional products and experiences to our customers, reflecting our dedication
+              to quality and service excellence.
+           </p>
+            <div class="team-members">
+                <article class="team-member">
+                    <figure>
+                        <img src="images/marketing.jpeg" alt="Executive Team Member">
+                        <figcaption>Jane Doe, CEO</figcaption>
+                    </figure>
+                    <p>Jane leads our company with a vision to innovate and provide top-quality products.</p>
+                </article>
+                <article class="team-member">
+                    <figure>
+                        <img src="images/marketing.jpg" alt="Marketing Team Member">
+                        <figcaption>John Smith,Director</figcaption>
+                    </figure>
+                    <p>John drives our marketing strategies and ensures our brand reaches the right audience.</p>
+                </article>
+                <!-- Add more team members as needed -->
+            </div>
+        </section>
+
+        <!-- Our Story -->
+        <section class="our-story">
+            <h2>Our Story</h2>
+            <p>Sewing Machines Inc. was established in 1995 with a strong commitment to crafting high-quality, 
+               dependable sewing machines for enthusiasts around the world. What began as a small operation with
+               a singular vision has grown over the years into a dynamic, customer-focused company known for
+               both innovation and reliability. From our first product line to our latest advanced models, 
+               we have continuously expanded and refined our offerings to meet the evolving needs of the sewing
+               community. Our growth has been fueled by a team of dedicated professionals who share a deep 
+               passion for creativity, precision, and customer satisfaction. Today, we are proud to serve a
+               loyal and diverse customer base,delivering products that combine traditional craftsmanship
+               with cutting-edge technology</p>
+   
+        </section>
+
+        <!-- Aside (Related content) -->
+        <aside>
+            <h3>Quick Facts</h3>
+            <ul>
+                <li>Founded: 1995</li>
+                <li>Headquarters: New York, USA</li>
+                <li>Over 100 employees worldwide</li>
+            </ul>
+        </aside>
     </main>
+</div>
     <footer>
         <p>&copy;Copyright 20099.All Rights Reserved</p>
         <p>Request Information</p>
