--- a/contact.html
+++ b/contact.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
+    <div class="container">
     <header>
         <a href="index.html"><img src="images/bg-logo.jpg" alt="sewing machine zoom" ></a>
     </header>
@@ -28,10 +29,11 @@
             <li><a href="contact.html">Contact</a></li>
         </ul>
     </nav>
-    <!-- Use the main area to add the main content to the webpages -->
+  
     <main>
            <div></div>
     </main>
+</div>
     <footer>
         <p>&copy;Copyright 20099.All Rights Reserved</p>
         <p>Request Information</p>
