--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-    
+    <div class="container">
+
     <header>
         <a href="index.html" class="banner-img"><img src="images/bg-logo.jpg" alt="sewing machine zoom" ></a>
     </header>
@@ -48,11 +49,13 @@
         </div>
     </main>
     <footer>
+
 <p>&copy;Copyright 20099.All Rights Reserved</p>
 <p>Request Information</p>
 <p>Prepared By:Khushbuben Rathva(c0947900) </p>
 <p><a href="mailto:sewing@machine.net">sewing@machine.net</a></p>
     </footer>
+    </div>
 </body>
 </html>
 
