--- a/training.html
+++ b/training.html
@@ -11,8 +11,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/training.css">
 </head>
 <body>
+    <div class="container">
     <header>
         <a href="index.html"><img src="images/bg-logo.jpg" alt="sewing machine zoom" ></a>
     </header>
@@ -28,10 +30,137 @@
             <li><a href="contact.html">Contact</a></li>
         </ul>
     </nav>
-    <!-- Use the main area to add the main content to the webpages -->
+   
     <main>
-           <div></div>
+        <table class="training-schedule">
+            <caption>Product Training Schedule</caption>
+            <thead>
+                <tr>
+                    <th>Product</th>
+                    <th>Date</th>
+                    <th>Price</th>
+                    <th>Length</th>
+                    <th>Room</th>
+                    <th>Instructor</th>
+                </tr>
+            </thead>
+            <tbody>
+              
+                <tr>
+                    <td><img src="images/product1.jpg" alt="Product 1"> Sewing Machine Model A</td>
+                    <td>01/15/2024</td>
+                    <td>$50</td>
+                    <td>2 hours</td>
+                    <td>Room 101</td>
+                    <td>John Doe</td>
+                </tr>
+                <tr>
+                    <td><img src="images/product2.jpg" alt="Product 2"> Sewing Machine Model B</td>
+                    <td>01/17/2024</td>
+                    <td>$45</td>
+                    <td>1.5 hours</td>
+                    <td>Room 102</td>
+                    <td>Jane Smith</td>
+                </tr>
+                <tr>
+                    <td><img src="images/product3.jpeg" alt="Product 3"> Quilting Machine Pro</td>
+                    <td>01/20/2024</td>
+                    <td>$60</td>
+                    <td>2.5 hours</td>
+                    <td>Room 103</td>
+                    <td>Michael Lee</td>
+                </tr>
+                <tr>
+                    <td><img src="images/product4.jpeg" alt="Product 4"> Embroidery Master 3000</td>
+                    <td>01/22/2024</td>
+                    <td>$70</td>
+                    <td>3 hours</td>
+                    <td>Room 104</td>
+                    <td>Linda Brown</td>
+                </tr>
+                <tr>
+                    <td><img src="images/product5.jpg" alt="Product 5"> Overlock Machine Deluxe</td>
+                    <td>01/25/2024</td>
+                    <td>$55</td>
+                    <td>2 hours</td>
+                    <td>Room 105</td>
+                    <td>Chris Johnson</td>
+                </tr>
+                <tr>
+                    <td><img src="images/product6.jpeg" alt="Product 6"> Compact Sewing Machine</td>
+                    <td>01/27/2024</td>
+                    <td>$40</td>
+                    <td>1 hour</td>
+                    <td>Room 106</td>
+                    <td>Sarah Kim</td>
+                </tr>
+                <tr>
+                    <td><img src="images/product7.jpg" alt="Product 7"> Industrial Sewing Pro</td>
+                    <td>01/30/2024</td>
+                    <td>$75</td>
+                    <td>3 hours</td>
+                    <td>Room 107</td>
+                    <td>David Green</td>
+                </tr>
+                <tr>
+                    <td><img src="images/product8.jpg" alt="Product 8"> Heavy Duty Quilter</td>
+                    <td>02/01/2024</td>
+                    <td>$65</td>
+                    <td>2.5 hours</td>
+                    <td>Room 108</td>
+                    <td>Patricia Allen</td>
+                </tr>
+                <tr>
+                    <td><img src="images/product9.jpeg" alt="Product 9"> Serger Supreme</td>
+                    <td>02/03/2024</td>
+                    <td>$50</td>
+                    <td>1.5 hours</td>
+                    <td>Room 109</td>
+                    <td>Robert White</td>
+                </tr>
+                <tr>
+                    <td><img src="images/product10.jpeg" alt="Product 10"> Embroidery Essentials</td>
+                    <td>02/05/2024</td>
+                    <td>$80</td>
+                    <td>3.5 hours</td>
+                    <td>Room 110</td>
+                    <td>Karen Young</td>
+                </tr>
+                <tr>
+                    <td><img src="images/product11.jpeg" alt="Product 11"> Buttonhole Specialist</td>
+                    <td>02/07/2024</td>
+                    <td>$45</td>
+                    <td>1 hour</td>
+                    <td>Room 111</td>
+                    <td>James Baker</td>
+                </tr>
+                <tr>
+                    <td><img src="images/product12.jpg" alt="Product 12"> Coverstitch Machine Plus</td>
+                    <td>02/09/2024</td>
+                    <td>$55</td>
+                    <td>2 hours</td>
+                    <td>Room 112</td>
+                    <td>Jessica Hall</td>
+                </tr>
+                <tr>
+                    <td><img src="images/product13.jpg" alt="Product 13"> Sewing Pro X</td>
+                    <td>02/11/2024</td>
+                    <td>$90</td>
+                    <td>4 hours</td>
+                    <td>Room 113</td>
+                    <td>Mark Thompson</td>
+                </tr>
+            </tbody>
+        </table>
+
+       
+        <section>
+            <h2>About Our Training Sessions</h2>
+            <p>We offer hands-on training to help you master our products. Each session is led by an expert instructor who will guide you through product features and provide helpful tips and best practices.</p>
+        </section>
     </main>
+
+</div>
     <footer>
         <p>&copy;Copyright 20099.All Rights Reserved</p>
         <p>Request Information</p>
