--- a/faqs.html
+++ b/faqs.html
@@ -10,23 +10,23 @@
     <title>Sewing Machines :Template</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="CSS/styles.css">
+    <link rel="stylesheet" href="/LCOF2469/CSS/styles.css">
 </head>
 <body>
     <div class="container">
     <header>
-        <a href="index.html"><img src="Images/bg-logo.jpg" alt="sewing machine zoom" ></a>
+        <a href="index.html"><img src="/LCOF2469/Images/bg-logo.jpg" alt="sewing machine zoom" ></a>
     </header>
     <nav>
         <ul> 
             <li><a href="index.html">Home</a></li>
-            <li><a href="about.html">About Us</a></li>
-            <li><a href="team.html">Our Team</a></li>
-            <li><a href="specials.html">Specials</a></li>
-            <li><a href="training.html">Training</a></li>
-            <li><a href="media.html">Media</a></li>
-            <li><a href="faqs.html">FAQs</a></li>
-            <li><a href="contact.html">Contact</a></li>
+            <li><a href="/LCOF2469/about.html">About Us</a></li>
+            <li><a href="/LCOF2469/team.html">Our Team</a></li>
+            <li><a href="/LCOF2469/specials.html">Specials</a></li>
+            <li><a href="/LCOF2469/training.html">Training</a></li>
+            <li><a href="/LCOF2469/media.html">Media</a></li>
+            <li><a href="/LCOF2469/faqs.html">FAQs</a></li>
+            <li><a href="/LCOF2469/contact.html">Contact</a></li>
         </ul>
     </nav>
    
