--- a/team.html
+++ b/team.html
@@ -10,24 +10,24 @@
     <title>Sewing Machines :Template</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/styles.css">
-    <link rel="stylesheet" href="css/team.css">
+    <link rel="stylesheet" href="/LCOF2469/CSS/styles.css">
+    <link rel="stylesheet" href="/LCOF2469/CSS/team.css">
 </head>
 <body>
     <div class="container">
     <header>
-        <a href="index.html"><img src="Images/bg-logo.jpg" alt="sewing machine zoom" ></a>
+        <a href="index.html"><img src="/LCOF2469/Images/bg-logo.jpg" alt="sewing machine zoom" ></a>
     </header>
     <nav>
         <ul> 
             <li><a href="index.html">Home</a></li>
-            <li><a href="about.html">About Us</a></li>
-            <li><a href="team.html">Our Team</a></li>
-            <li><a href="specials.html">Specials</a></li>
-            <li><a href="training.html">Training</a></li>
-            <li><a href="media.html">Media</a></li>
-            <li><a href="faqs.html">FAQs</a></li>
-            <li><a href="contact.html">Contact</a></li>
+            <li><a href="/LCOF2469/about.html">About Us</a></li>
+            <li><a href="/LCOF2469/team.html">Our Team</a></li>
+            <li><a href="/LCOF2469/specials.html">Specials</a></li>
+            <li><a href="/LCOF2469/training.html">Training</a></li>
+            <li><a href="/LCOF2469/media.html">Media</a></li>
+            <li><a href="/LCOF2469/faqs.html">FAQs</a></li>
+            <li><a href="/LCOF2469/contact.html">Contact</a></li>
         </ul>
     </nav>
     <!-- Use the main area to add the main content to the webpages -->
@@ -51,14 +51,14 @@
             <div class="team-members">
                 <article class="team-member">
                     <figure>
-                        <img src="images/marketing.jpeg" alt="Executive Team Member">
+                        <img src="/LCOF2469/images/marketing.jpeg" alt="Executive Team Member">
                         <figcaption>Jane Doe, CEO</figcaption>
                     </figure>
                     <p>Jane leads our company with a vision to innovate and provide top-quality products.</p>
                 </article>
                 <article class="team-member">
                     <figure>
-                        <img src="images/marketing.jpg" alt="Marketing Team Member">
+                        <img src="/LCOF2469/images/marketing.jpg" alt="Marketing Team Member">
                         <figcaption>John Smith,Director</figcaption>
                     </figure>
                     <p>John drives our marketing strategies and ensures our brand reaches the right audience.</p>
