--- a/training.html
+++ b/training.html
@@ -16,7 +16,7 @@
 <body>
     <div class="container">
     <header>
-        <a href="index.html"><img src="/LCOF2469/Images/bg-logo.jpg" alt="sewing machine zoom" ></a>
+        <a href="index.html"><img src="/LCOF2469//LCOF2469/Images/bg-logo.jpg" alt="sewing machine zoom" ></a>
     </header>
     <nav>
         <ul> 
@@ -47,7 +47,7 @@
             <tbody>
               
                 <tr>
-                    <td><img src="images/product1.jpg" alt="Product 1"> Sewing Machine Model A</td>
+                    <td><img src="/LCOF2469/Images/product1.jpg" alt="Product 1"> Sewing Machine Model A</td>
                     <td>01/15/2024</td>
                     <td>$50</td>
                     <td>2 hours</td>
@@ -55,7 +55,7 @@
                     <td>John Doe</td>
                 </tr>
                 <tr>
-                    <td><img src="images/product2.jpg" alt="Product 2"> Sewing Machine Model B</td>
+                    <td><img src="/LCOF2469/Images/product2.jpg" alt="Product 2"> Sewing Machine Model B</td>
                     <td>01/17/2024</td>
                     <td>$45</td>
                     <td>1.5 hours</td>
@@ -63,7 +63,7 @@
                     <td>Jane Smith</td>
                 </tr>
                 <tr>
-                    <td><img src="images/product3.jpeg" alt="Product 3"> Quilting Machine Pro</td>
+                    <td><img src="/LCOF2469/Images/product3.jpeg" alt="Product 3"> Quilting Machine Pro</td>
                     <td>01/20/2024</td>
                     <td>$60</td>
                     <td>2.5 hours</td>
@@ -71,7 +71,7 @@
                     <td>Michael Lee</td>
                 </tr>
                 <tr>
-                    <td><img src="images/product4.jpeg" alt="Product 4"> Embroidery Master 3000</td>
+                    <td><img src="/LCOF2469/Images/product4.jpeg" alt="Product 4"> Embroidery Master 3000</td>
                     <td>01/22/2024</td>
                     <td>$70</td>
                     <td>3 hours</td>
@@ -79,7 +79,7 @@
                     <td>Linda Brown</td>
                 </tr>
                 <tr>
-                    <td><img src="images/product5.jpg" alt="Product 5"> Overlock Machine Deluxe</td>
+                    <td><img src="/LCOF2469/Images/product5.jpg" alt="Product 5"> Overlock Machine Deluxe</td>
                     <td>01/25/2024</td>
                     <td>$55</td>
                     <td>2 hours</td>
@@ -87,7 +87,7 @@
                     <td>Chris Johnson</td>
                 </tr>
                 <tr>
-                    <td><img src="images/product6.jpeg" alt="Product 6"> Compact Sewing Machine</td>
+                    <td><img src="/LCOF2469/Images/product6.jpeg" alt="Product 6"> Compact Sewing Machine</td>
                     <td>01/27/2024</td>
                     <td>$40</td>
                     <td>1 hour</td>
@@ -95,7 +95,7 @@
                     <td>Sarah Kim</td>
                 </tr>
                 <tr>
-                    <td><img src="images/product7.jpg" alt="Product 7"> Industrial Sewing Pro</td>
+                    <td><img src="/LCOF2469/Images/product7.jpg" alt="Product 7"> Industrial Sewing Pro</td>
                     <td>01/30/2024</td>
                     <td>$75</td>
                     <td>3 hours</td>
@@ -103,7 +103,7 @@
                     <td>David Green</td>
                 </tr>
                 <tr>
-                    <td><img src="images/product8.jpg" alt="Product 8"> Heavy Duty Quilter</td>
+                    <td><img src="/LCOF2469/Images/product8.jpg" alt="Product 8"> Heavy Duty Quilter</td>
                     <td>02/01/2024</td>
                     <td>$65</td>
                     <td>2.5 hours</td>
@@ -111,7 +111,7 @@
                     <td>Patricia Allen</td>
                 </tr>
                 <tr>
-                    <td><img src="images/product9.jpeg" alt="Product 9"> Serger Supreme</td>
+                    <td><img src="/LCOF2469/Images/product9.jpeg" alt="Product 9"> Serger Supreme</td>
                     <td>02/03/2024</td>
                     <td>$50</td>
                     <td>1.5 hours</td>
@@ -119,7 +119,7 @@
                     <td>Robert White</td>
                 </tr>
                 <tr>
-                    <td><img src="images/product10.jpeg" alt="Product 10"> Embroidery Essentials</td>
+                    <td><img src="/LCOF2469/Images/product10.jpeg" alt="Product 10"> Embroidery Essentials</td>
                     <td>02/05/2024</td>
                     <td>$80</td>
                     <td>3.5 hours</td>
@@ -127,7 +127,7 @@
                     <td>Karen Young</td>
                 </tr>
                 <tr>
-                    <td><img src="images/product11.jpeg" alt="Product 11"> Buttonhole Specialist</td>
+                    <td><img src="/LCOF2469/Images/product11.jpeg" alt="Product 11"> Buttonhole Specialist</td>
                     <td>02/07/2024</td>
                     <td>$45</td>
                     <td>1 hour</td>
@@ -135,7 +135,7 @@
                     <td>James Baker</td>
                 </tr>
                 <tr>
-                    <td><img src="images/product12.jpg" alt="Product 12"> Coverstitch Machine Plus</td>
+                    <td><img src="/LCOF2469/Images/product12.jpg" alt="Product 12"> Coverstitch Machine Plus</td>
                     <td>02/09/2024</td>
                     <td>$55</td>
                     <td>2 hours</td>
@@ -143,7 +143,7 @@
                     <td>Jessica Hall</td>
                 </tr>
                 <tr>
-                    <td><img src="images/product13.jpg" alt="Product 13"> Sewing Pro X</td>
+                    <td><img src="/LCOF2469/Images/product13.jpg" alt="Product 13"> Sewing Pro X</td>
                     <td>02/11/2024</td>
                     <td>$90</td>
                     <td>4 hours</td>
