--- a/specials.html
+++ b/specials.html
@@ -56,7 +56,7 @@
                         <p><strong>Model X1000 Sewing Machine</strong> - 20% off this week!</p>
                     </div>
                     <div class="sale-item">
-                        <img src="images/sale-item21.jpg" alt="Sale Item 2" class="sale-img">
+                        <img src="Images/sale-item21.jpg" alt="Sale Item 2" class="sale-img">
                         <p><strong>Heavy Duty Needles Pack</strong> - Buy one, get one free!</p>
                     </div>
                     <div class="sale-item">
