--- a/contact.html
+++ b/contact.html
@@ -1,45 +1,91 @@
 <!DOCTYPE html>
 <!--
- Khushbuben Rathva
- C4 Lab 2
- 03 oct 2024 
- -->
+    Khushbuben Rathva
+    C4 Lab 2
+    03 Oct 2024
+-->
 
 <html lang="en">
 <head>
-    <title>Sewing Machines :Template</title>
+    <title>Sewing Machines : Contact</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="CSS/styles.css">
+    <link rel="stylesheet" href="CSS/contact.css">
 </head>
 <body>
     <div class="container">
-    <header>
-        <a href="index.html"><img src="Images/bg-logo.jpg" alt="sewing machine zoom" ></a>
-    </header>
-    <nav>
-        <ul> 
-            <li><a href="index.html">Home</a></li>
-            <li><a href="about.html">About Us</a></li>
-            <li><a href="team.html">Our Team</a></li>
-            <li><a href="specials.html">Specials</a></li>
-            <li><a href="training.html">Training</a></li>
-            <li><a href="media.html">Media</a></li>
-            <li><a href="faqs.html">FAQs</a></li>
-            <li><a href="contact.html">Contact</a></li>
-        </ul>
-    </nav>
-  
-    <main>
-           <div></div>
-    </main>
-</div>
-    <footer>
-        <p>&copy;Copyright 20099.All Rights Reserved</p>
-        <p>Request Information</p>
-        <p>Prepared By:Khushbuben Rathva(c0947900) </p>
-        <p><a href="mailto:sewing@machine.net">sewing@machine.net</a></p>
-    </footer>
-</body>
-</html>
+        <header>
+            <a href="index.html"><img src="Images/bg-logo.jpg" alt="Sewing Machines"></a>
+        </header>
+        <nav>
+            <ul> 
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">About Us</a></li>
+                <li><a href="team.html">Our Team</a></li>
+                <li><a href="specials.html">Specials</a></li>
+                <li><a href="training.html">Training</a></li>
+                <li><a href="media.html">Media</a></li>
+                <li><a href="faqs.html">FAQs</a></li>
+                <li><a href="contact.html">Contact</a></li>
+            </ul>
+        </nav>
+      
+        <main>
+            <h2>Contact Us</h2>
+            <ol>
+                <li>Please fill out the form below to contact us.</li>
+                <li>Ensure all required fields are filled before submission.</li>
+            </ol>
+            <form action="contact.html" method="get">
+                <fieldset>
+                    <legend>Contact Information</legend>
 
+                    <label for="name">Name:</label>
+                    <input type="text" id="name" name="name" placeholder="Your full name" required autofocus>
+
+                    <label for="email">Email:</label>
+                    <input type="email" id="email" name="email" placeholder="Your email address" required>
+
+                    <label for="dob">Date of Birth:</label>
+                    <input type="date" id="dob" name="dob">
+
+                    <label id="gender">Gender:</label>
+                    <input type="radio" id="male" name="gender" value="male">
+                    <label for="male">Male</label>
+                    <input type="radio" id="female" name="gender" value="female">
+                    <label for="female">Female</label>
+                    <input type="radio" id="other" name="gender" value="other">
+                    <label for="other">Other</label>
+                    <br>
+                    <label for="services">Preferred Service:</label>
+                    <select id="services" name="services">
+                        <option value="repair">Repair</option>
+                        <option value="purchase">Purchase</option>
+                        <option value="training">Training</option>
+                    </select>
+
+                    <label for="message">Message:</label>
+                    <textarea id="message" name="message" placeholder="Write your message here..." rows="5" required></textarea>
+
+                    <label>Services Interested In:</label>
+                    <input type="checkbox" id="webdesign" name="services" value="webdesign">
+                    <label for="webdesign">Web Design</label>
+                    <input type="checkbox" id="seo" name="services" value="seo">
+                    <label for="seo">SEO</label>
+                    <input type="checkbox" id="marketing" name="services" value="marketing">
+                    <label for="marketing">Marketing</label>
+
+                    <div class="form-buttons">
+                        <button type="submit">Submit Request</button>
+                        <button type="reset">Reset Form</button>
+                    </div>
+                </fieldset>
+            </form>
+        </main>
+    </div>
+    <footer>
+        <p>&copy; 20099. All Rights Reserved</p>
+        <p>Prepared By: Khushbuben Rathva (c0947900)</p>
+        <p><a href="mailto:sewing@machine.net">sewing@machine.net</a></p>
+   
