--- a/team.html
+++ b/team.html
@@ -52,16 +52,16 @@
                 <article class="team-member">
                     <figure>
                         <img src="images/marketing.jpeg" alt="Executive Team Member">
-                        <figcaption>Jane Doe, CEO</figcaption>
+                        <figcaption>Derek Shepherd, CEO</figcaption>
                     </figure>
-                    <p>Jane leads our company with a vision to innovate and provide top-quality products.</p>
+                    <p>Derek leads our company with a vision to innovate and provide top-quality products.</p>
                 </article>
                 <article class="team-member">
                     <figure>
                         <img src="images/marketing.jpg" alt="Marketing Team Member">
-                        <figcaption>John Smith,Director</figcaption>
+                        <figcaption>Alex Karev,Director</figcaption>
                     </figure>
-                    <p>John drives our marketing strategies and ensures our brand reaches the right audience.</p>
+                    <p>Karev drives our marketing strategies and ensures our brand reaches the right audience.</p>
                 </article>
                 <!-- Add more team members as needed -->
             </div>
