path issue solved

--- a/team.html
+++ b/team.html
@@ -51,14 +51,14 @@
             <div class="team-members">
                 <article class="team-member">
                     <figure>
-                        <img src="images/marketing.jpeg" alt="Executive Team Member">
+                        <img src="/LCOF2469/Images/marketing.jpeg" alt="Executive Team Member">
                         <figcaption>Derek Shepherd, CEO</figcaption>
                     </figure>
                     <p>Derek leads our company with a vision to innovate and provide top-quality products.</p>
                 </article>
                 <article class="team-member">
                     <figure>
-                        <img src="images/marketing.jpg" alt="Marketing Team Member">
+                        <img src="/LCOF2469/Images/marketing.jpg" alt="Marketing Team Member">
                         <figcaption>John Smith,Director</figcaption>
                     </figure>
                     <p>Karev drives our marketing strategies and ensures our brand reaches the right audience.</p>
