--- a/media.html
+++ b/media.html
@@ -24,15 +24,15 @@
         <!-- Navigation Bar -->
         <nav>
             <ul class="navigation">
-                <li><a href="index.html">Home</a></li>
-                <li><a href="about.html">About Us</a></li>
-                <li><a href="team.html">Our Team</a></li>
-                <li><a href="specials.html">Specials</a></li>
-                <li><a href="training.html">Training</a></li>
-                <li><a href="media.html" class="active">Media</a></li>
-                <li><a href="faqs.html">FAQs</a></li>
-                <li><a href="contact.html">Contact</a></li>
-            </ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="/LCOF2469/about.html">About Us</a></li>
+                    <li><a href="/LCOF2469/team.html">Our Team</a></li>
+                    <li><a href="/LCOF2469/specials.html">Specials</a></li>
+                    <li><a href="/LCOF2469/training.html">Training</a></li>
+                    <li><a href="/LCOF2469/media.html">Media</a></li>
+                    <li><a href="/LCOF2469/faqs.html">FAQs</a></li>
+                    <li><a href="/LCOF2469/contact.html">Contact</a></li>
+               </ul>
         </nav>
 
         <!-- Main Content -->
