contact page issue resolved

--- a/contact.html
+++ b/contact.html
@@ -10,8 +10,8 @@
     <title>Sewing Machines : Contact</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/LCOF2469CSS/styles.css">
-    <link rel="stylesheet" href="/LCOF2469CSS/contact.css">
+    <link rel="stylesheet" href="/LCOF2469/CSS/styles.css">
+    <link rel="stylesheet" href="/LCOF2469/CSS/contact.css">
 </head>
 <body>
     <div class="container">
@@ -37,7 +37,7 @@
             <li>Please fill out the form below to contact us.</li>
             <li>Ensure all required fields are filled before submission.</li>
         </ol>
-        <form action="contact.html" method="get">
+        <form action="/LCOF2469/contact.html" method="get">
             <fieldset>
                 <legend>Contact Information</legend>
 
