--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
 <body>
    
     <header>
-        <!-- <a href="index.html"><img src="Images/bg-logo.jpg" alt="sewing machine zoom" ></a> -->
-          </header>
+        <a href="index.html"><img src="Images/bg-logo.jpg" alt="sewing machine zoom" ></a>
+    </header>
     <nav id="navbar">
         <ul> 
             <li><a href="index.html">Home</a></li>
