media file updated

--- a/media.html
+++ b/media.html
@@ -60,10 +60,32 @@
             <section>
                 <h2>Training Videos</h2>
                 <p>Watch in-depth training videos that cover everything from sewing basics to advanced techniques.</p>
-                <video controls width="640" height="360">
-                    <source src="Media/sewing-tutorial-video.mp4" type="video/mp4">
-                    Your browser does not support the video tag.
-                </video>
+                <div class="video-grid">
+                    <video controls>
+                        <source src="Media/video1.mp4" type="video/mp4">
+                        Your browser does not support the video tag.
+                    </video>
+                    <video controls>
+                        <source src="Media/video2.mp4" type="video/mp4">
+                        Your browser does not support the video tag.
+                    </video>
+                    <video controls>
+                        <source src="Media/video3.mp4" type="video/mp4">
+                        Your browser does not support the video tag.
+                    </video>
+                    <video controls>
+                        <source src="Media/video4.mp4" type="video/mp4">
+                        Your browser does not support the video tag.
+                    </video>
+                    <video controls>
+                        <source src="Media/video5.mp4" type="video/mp4">
+                        Your browser does not support the video tag.
+                    </video>
+                    <video controls>
+                        <source src="Media/video6.mp4" type="video/mp4">
+                        Your browser does not support the video tag.
+                    </video>
+                </div>
             </section>
         </main>
     </div>
