--- a/faqs.html
+++ b/faqs.html
@@ -11,8 +11,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/LCOF2469/CSS/styles.css">
-    <link rel="stylesheet" href="CSS/faq.css">
-    <link rel="icon" type="image/x-icon" href="Images/bg-logo.jpg">
+    <link rel="stylesheet" href="/LCOF2469/CSS/faq.css">
+    <link rel="icon" type="image/x-icon" href="/LCOF2469/Images/bg-logo.jpg">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 
 
