--- a/media.html
+++ b/media.html
@@ -11,7 +11,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/LCOF2469/CSS/styles.css">
-    <link rel="icon" type="image/x-icon" href="Images/bg-logo.jpg">
+    <link rel="icon" type="image/x-icon" href="/LCOF2469/Images/bg-logo.jpg">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 
 
@@ -21,7 +21,7 @@
         <!-- Header Section -->
         <header>
             <a href="index.html">
-                <img src="Images/bg-logo.jpg" alt="Sewing Machines Logo" class="logo">
+                <img src="/LCOF2469/Images/bg-logo.jpg" alt="Sewing Machines Logo" class="logo">
             </a>
         </header>
 
@@ -51,7 +51,7 @@
                 <h2>Audio Tutorials</h2>
                 <p>Learn step-by-step sewing techniques by listening to our detailed audio guides.</p>
                 <audio controls>
-                    <source src="Media/sewing-tutorial.mp3" type="audio/mpeg">
+                    <source src="/LCOF2469/Media/sewing-tutorial.mp3" type="audio/mpeg">
                     Your browser does not support the audio element.
                 </audio>
             </section>
@@ -62,27 +62,27 @@
                 <p>Watch in-depth training videos that cover everything from sewing basics to advanced techniques.</p>
                 <div class="video-grid">
                     <video controls>
-                        <source src="Media/video1.mp4" type="video/mp4">
+                        <source src="/LCOF2469/Media/video1.mp4" type="video/mp4">
                         Your browser does not support the video tag.
                     </video>
                     <video controls>
-                        <source src="Media/video2.mp4" type="video/mp4">
+                        <source src="/LCOF2469/Media/video2.mp4" type="video/mp4">
                         Your browser does not support the video tag.
                     </video>
                     <video controls>
-                        <source src="Media/video3.mp4" type="video/mp4">
+                        <source src="/LCOF2469/Media/video3.mp4" type="video/mp4">
                         Your browser does not support the video tag.
                     </video>
                     <video controls>
-                        <source src="Media/video4.mp4" type="video/mp4">
+                        <source src="/LCOF2469/Media/video4.mp4" type="video/mp4">
                         Your browser does not support the video tag.
                     </video>
                     <video controls>
-                        <source src="Media/video5.mp4" type="video/mp4">
+                        <source src="/LCOF2469/Media/video5.mp4" type="video/mp4">
                         Your browser does not support the video tag.
                     </video>
                     <video controls>
-                        <source src="Media/video6.mp4" type="video/mp4">
+                        <source src="/LCOF2469/Media/video6.mp4" type="video/mp4">
                         Your browser does not support the video tag.
                     </video>
                 </div>
