--- a/specials.html
+++ b/specials.html
@@ -11,7 +11,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/LCOF2469/CSS/styles.css">
-    <link rel="icon" type="image/x-icon" href="Images/bg-logo.jpg">
+    <link rel="icon" type="image/x-icon" href="/LCOF2469/Images/bg-logo.jpg">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 
 
@@ -41,7 +41,7 @@
             <section class="product-week">
                 <h2>Product of the Week</h2>
                 <div class="product-content">
-                    <img src="Images/product-of-the-week.jpg" alt="Product of the Week" class="product-img">
+                    <img src="/LCOF2469/Images/product-of-the-week.jpg" alt="Product of the Week" class="product-img">
                     <p>
                         This week's featured product is the **SuperStitch Pro 5000**. 
                         Ideal for both beginners and professionals, the SuperStitch Pro 5000 offers 
@@ -56,15 +56,15 @@
                 <h2>Weekly Sales </h2>
                 <div class="sale-items">
                     <div class="sale-item">
-                        <img src="Images/sale-item1.jpg" alt="Sale Item 1" class="sale-img">
+                        <img src="/LCOF2469/Images/sale-item1.jpg" alt="Sale Item 1" class="sale-img">
                         <p><strong>Model X1000 Sewing Machine</strong> - 20% off this week!</p>
                     </div>
                     <div class="sale-item">
-                        <img src="Images/sale-item21.jpg" alt="Sale Item 2" class="sale-img">
+                        <img src="/LCOF2469/Images/sale-item21.jpg" alt="Sale Item 2" class="sale-img">
                         <p><strong>Heavy Duty Needles Pack</strong> - Buy one, get one free!</p>
                     </div>
                     <div class="sale-item">
-                        <img src="Images/sale-item3.jpg" alt="Sale Item 3" class="sale-img">
+                        <img src="/LCOF2469/Images/sale-item3.jpg" alt="Sale Item 3" class="sale-img">
                         <p><strong>Portable Sewing Kit</strong> - Now only $15.99!</p>
                     </div>
                 </div>
