--- a/template.html
+++ b/template.html
@@ -11,14 +11,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="CSS/styles.css">
-    <link rel="icon" type="image/x-icon" href="Images/bg-logo.jpg">
+    <link rel="icon" type="image/x-icon" href="/LCOF2469/Images/bg-logo.jpg">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 
 
 </head>
 <body>
     <header>
-        <a href="index.html"><img src="Images/bg-logo.jpg" alt="sewing machine zoom" ></a>
+        <a href="index.html"><img src="/LCOF2469/Images/bg-logo.jpg" alt="sewing machine zoom" ></a>
     </header>
     <nav>
         <ul> 
