update media file

--- a/media.html
+++ b/media.html
@@ -47,7 +47,8 @@
             </section>
 
             <!-- Audio Section -->
-            <section>
+            <section class="media-section">
+
                 <h2>Audio Tutorials</h2>
                 <p>Learn step-by-step sewing techniques by listening to our detailed audio guides.</p>
                 <audio controls>
@@ -57,7 +58,8 @@
             </section>
 
             <!-- Video Section -->
-            <section>
+            <section class="media-section">
+
                 <h2>Training Videos</h2>
                 <p>Watch in-depth training videos that cover everything from sewing basics to advanced techniques.</p>
                 <div class="video-grid">
